--- a/admin-frontend/src/_metronic/assets/sass/core/components/_print.scss
+++ b/admin-frontend/src/_metronic/assets/sass/core/components/_print.scss
@@ -2,7 +2,7 @@
 // Print Mode
 //
 
-// Add .print-content-only class to body element in order to allow printing only the content area
+// Add .print-content-only class to body element in orders to allow printing only the content area
 @media print {
   .print-content-only {
     padding: 0 !important;
