--- a/admin-frontend/src/_metronic/assets/sass/plugins.scss
+++ b/admin-frontend/src/_metronic/assets/sass/plugins.scss
@@ -3,7 +3,7 @@
 //
 
 ////////////////////////////////////////////////////////////////
-///////////// DO NOT MODIFY BELOW INCLUDE ORDER ////////////////
+///////////// DO NOT MODIFY BELOW INCLUDE ORDERS ////////////////
 ////////////////////////////////////////////////////////////////
 
 // Initialize
