--- a/admin-frontend/src/_metronic/assets/sass/core/layout/base/_print.scss
+++ b/admin-frontend/src/_metronic/assets/sass/core/layout/base/_print.scss
@@ -2,7 +2,7 @@
 // Print
 //
 
-// Add .app-print-content-only class to body element in order to allow printing only the content area
+// Add .app-print-content-only class to body element in orders to allow printing only the content area
 @media print {
   .app-print-content-only {
     padding: 0 !important;
